beginning of the first day’s talk notes
adds a couple of notes about future references

--- a/main.tex
+++ b/main.tex
@@ -118,6 +118,28 @@ I do want to assemble course notes from this class, but it's unlikely that I wil
 
 \section{Jan 25}
 
+The goal of this class is to communicate a certain \textit{weltanschauung} uncovered in pieces by many different people working in bordism theory, and the goal just for today is to tell a story about one theorem where it is especially apparent.
+
+To begin, recall that a bordism theory $MX$, where $X$ is some suitable family of structure groups $X_n \to O(n)$, is a homology theory similar to singular homology but where the chains are constructed from $X$--structured manifolds and their boundaries.  The coefficient ring of $MX$, or its value $MX_*(*)$ on a point, gives the ring of $X$--bordism classes, and generally $MX_*(Y)$ of some space $Y$ gives a kind of ``bordism in families''.  There are evident comparison morphisms for the most ordinary kinds of bordism, given by replacing a chain of manifolds with an equivalent simplicial chain: \[MO \to H\Z/2, \quad MSO \to H\Z.\] The first one is essentially an equivalence, but the second one is quite far from being an equivalence. More intriguingly, for $X = e$ the trivial structure group, the Pontryagin--Thom construction gives an equivalence $Me \xrightarrow{\simeq} \S$, and so it is possible (and some people have taken this viewpoint) that stable homotopy theory can be done solely through the lens of ``framed bordism''.
+
+I'm a stable homotopy theorist rather than a differential topologist, and so I prefer to view this the other way: the sphere spectrum $\S$ often appears in my life as a natural object, and I will sometimes replace it by $Me$, the framed bordism spectrum.
+
+
+
+
+
+theories of integration
+
+
+
+
+The structure of the class will be, more or less, to work through a sequence of case studies where this perspective on algebraic topology shines through most brightly.  We'll start by working through Thom's calculation of the homotopy of $MO$, which simultaneously holds the attractive features of being free of technical complexity while revealing essentially all of the structural complexity.  Having seen that through to the end, we'll then work on reinforcing our technical underpinnings, and then we'll venture on to other examples.
+
+
+
+
+
+
 The stated goal of this class is to study something called the ``$\sigma$--orientation'', due in various incarnations to Ochanine, Witten, Ando--Hopkins--Strickland, Ando--Strickland, Ando--Hopkins--Rezk, and probably others.
 
 
@@ -163,6 +185,10 @@ Framed bordism agrees with the sphere spectrum
 \section{Material for lecture}
 
 The cohomology of a qc sheaf pushed forward from a scheme to a stack along a cover agrees with just the cohomology over the scheme. (In the case of $* \to * \mmod G$, this probably uses the cospan $* \to * \mmod G \leftarrow *$ with pullback $G$...)
+
+Akhil Mathew has notes from an algebraic geometry class ( https://math.berkeley.edu/{\textasciitilde}amathew/232b.pdf ) where lectures 3--5 address the theorem of the cube.
+
+Equivalences of various sorts of cohomologies: Ext in modules and quasicoherent cohomology (goodness. Hartshorne, I suppose); Ext in comodules and quasicoherent cohomology on stacks (COCTALOS Lemma 12.4); quasicoherent cohomology on simplicial schemes (Stacks project 09VK).
 
 \section{Jan 27}
 
