change the font options so that it’ll compile easier on others’ computers

--- a/main.tex
+++ b/main.tex
@@ -1,9 +1,15 @@
 \documentclass{amsart}
 
-\usepackage{fullpage}
-%\usepackage{amsmath,amssymb,amsfonts,amsthm,stmaryrd}
-\usepackage{stmaryrd}
-\usepackage[urw-garamond]{mathdesign}
+%\usepackage{fullpage}
+\usepackage{amsmath,amssymb,amsfonts,amsthm,stmaryrd}
+%\usepackage{stmaryrd}
+
+\usepackage{mathpazo} % math & rm
+\linespread{1.05}        % Palatino needs more leading (space between lines)
+\usepackage[scaled]{helvet} % ss
+\usepackage{courier} % tt
+\normalfont
+\usepackage[T1]{fontenc}
 
 \usepackage{tikz-cd}
 
