couple more future ideas

--- a/main.tex
+++ b/main.tex
@@ -214,6 +214,7 @@ calculation of $H\F_2^* BO(1)$ and $H\F_2^* MO(1)$ using the module-theoretic pa
 
 Our overriding theme for this semester is to put ``Spec'' in front of things in algebraic topology and see what happens.
 
+What we mean by an affine scheme: the functor of points.
 
 The schemes $\RP^n_{H\F_2}$, the group structure on $\RP^\infty_{H\F_2}$
 
@@ -234,6 +235,8 @@ moral value: discerning $2$ from $0$ by $\Sq^1$
 by--hand construction with $H\F_2$--injective towers
 
 identification of the $E_2$ page: $\Ext$ in the category of comodules
+
+Example: $\Ext$ in comodules for the group algebra agrees with group cohomology
 
 reinterpretation as $\Aut \widehat \G_a$--equivariant cohomology over $\Spec \F_2$
 
