some references added

--- a/main.tex
+++ b/main.tex
@@ -157,7 +157,7 @@ There is a cobordism invariant $o(M)$ of an oriented manifold $M$ which is a lev
 \noindent Witten then strengthened this result considerably:
 
 \begin{theorem}[Witten]
-Ochanine's genus is in fact multiplicative. Also, if $M$ is a Spin manifold such that twice its first Pontryagin class vanishes, then $o(M)$ can be ``refined'' to a level $1$ modular form $w(M)$.
+Ochanine's genus is in fact multiplicative. Also, if $M$ is a Spin manifold such that twice its first Pontryagin class vanishes, then $o(M)$ can be ``refined''\todo{What does ``refined'' mean, anyway? It's a square root, maybe?} to a level $1$ modular form $w(M)$.
 \end{theorem}
 
 \noindent However, neither party gave indication that their result should be valid ``in families'', and no theory of integration was produced.  It wasn't even clear what such a claim would mean: to give a topological enrichment of these theorems would mean finding a ring spectrum $E$ such that $E_*(*)$ had something to do with modular forms.  Around the same time, Landweber, Ravenel, and Stong began studying ``elliptic cohomology'' for independent reasons, and a decade later Ando, Hopkins, and Strickland put them together in the following theorem:
@@ -283,9 +283,11 @@ Akhil Mathew has notes from an algebraic geometry class ( https://math.berkeley.
 
 Equivalences of various sorts of cohomologies: Ext in modules and quasicoherent cohomology (goodness. Hartshorne, I suppose); Ext in comodules and quasicoherent cohomology on stacks (COCTALOS Lemma 12.4); quasicoherent cohomology on simplicial schemes (Stacks project 09VK).
 
-using the splitting principle to describe $\Div^+_n \CP^\infty_E = BU(n)_E$, and in particular that projectivization theorem.
+using the splitting principle to describe $\Div^+_n \CP^\infty_E = BU(n)_E$, and in particular that projectivization theorem. This is in the proof of 16.2 in Switzer, though he doesn't state it as one of the consequences in the theorem text itself. The main point is that the fiber map $\CP^{n-1} \to P(V) \to X$ postcomposes by $P(V) \to \CP^\infty$ to the skeletal inclusion, so the Serre spectral sequence degenerates since its fiber is unmolested (or: the Leray--Hirsch theorem). The Chern classes are \emph{defined} by the one remaining multiplicative extension.
 
+character sheaves, $\moduli{fg}$ versus $\moduli{fg}^{(1)}$, graded versus ungraded things. this is explored in some detail around Remark 3.14 and formula (3.4) in Paul's notes on $\CatOf{QCoh}(\moduli{fg})$.
 
+A proof of Quillen's theorem appears in II.8 in Adams's blue book.
 
 
 
