--- a/main.tex
+++ b/main.tex
@@ -49,6 +49,7 @@
 \newcommand{\co}{\colon\thinspace}
 \newcommand{\into}{\hookrightarrow}
 \newcommand{\cotensor}{\square}
+\renewcommand{\th}{\textsuperscript{th}}
 
 \newcommand{\context}[1]{\mathcal{M}_{#1}}
 \newcommand{\CatOf}[1]{\mathsf{#1}}
@@ -126,7 +127,11 @@ I do want to assemble course notes from this class, but it's unlikely that I wil
 
 \newpage
 
-\section{Jan 25}
+\tableofcontents
+
+\newpage
+
+\section{Jan 25: Introduction}
 
 The goal of this class is to communicate a certain \textit{weltanschauung} uncovered in pieces by many different people working in bordism theory, and the goal just for today is to tell a story about one theorem where it is especially apparent.
 
@@ -184,7 +189,7 @@ For $E$ an even--periodic cohomology theory, \[\Spec E_* MU[6, \infty) \cong C^3
 
 
 
-\section{Jan 27}
+\section{Jan 27: Thom spectra and the Thom isomorphism}
 
 Our first case study is a sequence of theorems about the unoriented bordism spectrum $MO$.  I wanted to begin by recalling one definition of the spectrum $MO$, since it will be useful to us throughout the semester.
 
@@ -279,23 +284,141 @@ This powers an induction that shows that $H\Z/2_* \RP^\infty$ has a single class
 
 
 
-\section{Jan 29}
+\section{Jan 29: Cohomology rings and affine schemes}
 
-Our overriding theme for this semester is to put ``Spec'' in front of things in algebraic topology and see what happens.
+\todo{Decide on $\Z/2$ versus $\F_2$. I think in the previous lecture you were avoiding $\F_2$ because it got in the way of your homology subscripts.}An abbreviated summary of this semester is that we're going to put ``$\Spec$'' in front of rings appearing in algebraic topology and see what happens.  Before doing any algebraic topology, let me remind you what this means on the level of algebra.  The core idea is to replace a ring $R$ by the functor it corepresents.  For any ``test $\F_2$--algebra'' $T$, we set \[\Spec(R)(T) := \CatOf{Schemes}_{/\F_2}(\Spec T, \Spec R) := \CatOf{Algebras}_{\F_2/}(R, T).\]  The centerpiece of thinking about rings in this way is to translate between a presentation of $R$ as a quotient of a free algebra and a presentation of $(\Spec R)(T)$ as selecting tuples of elements in $T$ subject to certain conditions.  Consider the following example:
+\begin{example}
+Set $R_1 = \F_2[x]$.  Then \[(\Spec R_1)(T) = \CatOf{Algebras}_{\F_2/}(\F_2[x], T)\] is determined by where $x$ is sent --- i.e., this Hom--set is naturally isomorphic to $T$ itself.  Consider also what happens when we impose a relation by passing to $R_2 = \F_2[x] / (x^{n+1})$.  The value \[(\Spec R_2)(T) = \CatOf{Algebras}_{\F_2/}(\F_2[x] / (x^{n+1}), T)\] of the associated affine scheme is again determined by where $x$ is sent, but now $x$ can only be sent to elements which are nilpotent of order $n+1$.  These schemes are both important enough that we give them special names:
+\begin{align*}
+\mathbb A^1 & := \Spec \F_2[x], & \mathbb A^{1, (n)} & := \Spec \F_2[x] / (x^{n+1}).
+\end{align*}
+The symbol ``$\mathbb A^1$'' is pronounced ``the affine line''.  Note that $\mathbb A^{1, (n)}$ is always subfunctor of $\mathbb A^1$ and that $\mathbb A^{1, (0)}$ is a constant functor at the map with $x \mapsto 0$.  Accordingly, we pronounce ``$\mathbb A^{1, (n)}$'' as ``the $n${\th} order neighborhood of zero in the affine line''.
+\end{example}
 
-What we mean by an affine scheme: the functor of points.
+We can also express in this language another common object in algebraic topology: the Hopf algebra, which arises when taking the mod--$2$ cohomology of an $H$--space.  In addition to the usual cohomology, the extra pieces of data are those induced by the $H$--space multiplication and unit map, which on cohomology beget a diagonal map $\Delta$ and an antipode map $\chi$.  Running through the axioms, one quickly checks the following:
+\begin{lemma}
+For a Hopf $\F_2$--algebra $R$, the functor $\Spec R$ is naturally valued in groups.  Such functors are called \textit{group schemes}.  Conversely, a choice of group structure on $(\Spec R)(T)$ natural in $T$ endows $R$ with the structure of a Hopf algebra. \qed
+\end{lemma}
 
-The schemes $\RP^n_{H\F_2}$, the group structure on $\RP^\infty_{H\F_2}$
+\begin{example}\label{InformalAdditiveGroupExample}
+The functor $\mathbb A^1$ introduced above is naturally valued in groups: since $\mathbb A^1(T) \cong T$, we can use the addition on $T$ to make it into an abelian group.  When considering $\mathbb A^1$ with this group scheme structure, we notate it as $\mathbb G_a$.  Applying the Yoneda lemma, one deduces the following formulas for the Hopf algebra structure maps:
+\begin{align*}
+\mathbb G_a \times \mathbb G_a & \xrightarrow{\mu} \mathbb G_a & x_1 + x_2 & \mapsfrom x, \\
+\mathbb G_a & \xrightarrow{\chi} \mathbb G_a & -x & \mapsfrom x, \\
+\Spec \F_2 & \xrightarrow{\eta} \mathbb G_a & 0 & \mapsfrom x.
+\end{align*}
+\end{example}
 
-The Steenrod algebra: Milnor's theorem that (1) the operations are all visible in $\RP^\infty_{H\F_2}$, (2) the cooperations are polynomial, and (3) formulas for the diagonal and conjugate
+\begin{example}
+We define the \textit{multiplicative group scheme} by\todo{Do you want this to be a $\Z$--algebra? Ditto with $\mathbb A^1$ and $\mathbb G_a$?} \[\G_m = \Spec \F_2[x, y] / (xy - 1).\]  The value $\G_m(T)$ on a test algebra $T$ is the set of pairs $(x, y)$ such that $y$ is a multiplicative inverse to $x$, and hence $\G_m$ is valued in groups.  Applying the Yoneda lemma, we deduce the following formulas for the Hopf algebra structure maps:
+\begin{align*}
+\mathbb G_m \times \mathbb G_m & \xrightarrow{\mu} \mathbb G_m & x_1 \otimes x_2 & \mapsfrom x \\
+& & y_1 \otimes y_2 & \mapsfrom y, \\
+\mathbb G_m & \xrightarrow{\chi} \mathbb G_m & (y, x) & \mapsfrom (x, y), \\
+\Spec R & \xrightarrow{\eta} \mathbb G_m & 1 & \mapsfrom x, y.
+\end{align*}
+\end{example}
 
-Generally: if $X$ is a space, then $X_{H\F_2}$ is a scheme with an $\Aut \widehat \G_a$--action. If $X$ is a spectrum (so it fails to have a diagonal map) then $(H\F_2)_* X$ is just an $\F_2$--module, also with an $\Aut \widehat \G_a$--action.
+Let's now consider the example that we closed with last time, where we calculated $H\Z/2^*(\RP^n) = \F_2[x] / (x^{n+1})$.  Putting ``$\Spec$'' in front of this, we could reinterpret this calculation as \[\Spec H\F_2^*(\RP^n) \cong \mathbb A^{1, (n)}.\]  However, we will quickly see that the target category of this construction is mildly too lax to be truly useful.  Here are the three deficiencies we will work toward fixing, some slowly and some quickly:
+\begin{enumerate}
+\item \label{GradingDeficiency} Cohomology rings are \emph{graded}, and maps of spaces respect this grading.
+\item \label{SteenrodDeficiency} Cohomology rings receive an action of the Steenrod algebra, and maps of spaces respect this action.
+\item \label{InfiniteCplxDeficiency} Both of these are complicated further when taking the cohomology of an infinite complex.
+\item \label{SkewCommutativeDeficiency} (Cohomology rings for more elaborate cohomology theories are only skew-commutative, but ``$\Spec$'' requires a commutative input.)
+\end{enumerate}
 
-Make a point that you mean $\Aut \widehat \G_a$ and not $\Aut \G_a$.
+We will turn first to deficiency \ref{GradingDeficiency}.  There is a standard construction in algebraic geometry that recovers gradings:
+\begin{lemma}
+A graded ring $R$ is equivalent data to an affine scheme $\Spec R$ with an action by $\mathbb G_m$.
+\end{lemma}
+\begin{proof}
+\todo{Cite this.} The action map $\mathbb G_m \times \Spec R \to \Spec R$ is equivalent to a ring map $R \to R[u^\pm]$.  Send homogeneous elements $r \in R$ of degree $n$ to $u^{-n} R$ and extend linearly.
+\end{proof}
+\noindent The analogous operation in algebraic topology is to replace $H\F_2$ by the periodified spectrum $H\F_2P = \bigvee_{j=-\infty}^\infty \Susp^j H\F_2$ with coefficient ring $\pi_* H\F_2P = \F_2[u^\pm]$.  A cohomology class $\omega \in H\F_2^n(X)$ is represented in periodified cohomology by the de-scaled class $u^{-n} \omega \in H\F_2P^0(X)$.\todo{This is really lacking substance.}
 
 
 
-\section{Feb 1}
+
+The other deficiencies we will investigate as we go.  In the meantime, this construction of taking ``$\Spec$'' of a cohomology ring will be so frequently useful that we give it a notation all its own.
+
+\begin{definition}
+Let $X$ be a finite cell complex, so that $H\F_2^*(X)$ is a ring which is finite--dimensional as an $\F_2$--vector space.  We will write \[X_{H\F_2} = \Spec H\F_2P^0 X = \Spec H\F_2^* X\] for the corresponding finite affine scheme (with $\G_m$--action).
+\end{definition}
+
+\begin{example}
+Putting this all together, we have calculated \[\RP^n_{H\Z/2} \cong \mathbb A^{1, (n)}.\]
+\end{example}
+
+So far, this example just restates things we knew in a mildly different language.  Our goal now is to incorporate as much information as we have about these cohomology rings $H\F_2^* \RP^n$ into this description, which will result in us giving a more ``precise'' name for this object.  Along the way, we will also address two of our deficiencies.
+
+\begin{example}\label{RPExampleFaulty}
+Recall that $\RP^\infty$ is an $H$--space, using either the identification $\RP^\infty \simeq K(\Z/2, 1)$ and the sum on cohomology or, equivalently, the identification $\RP^\infty \simeq BO(1)$ and the tensor product of real line bundles.  In both cases, this induces a Hopf algebra diagonal \[H\F_2P^0 \RP^\infty \otimes H\F_2P^0 \RP^\infty \xleftarrow\Delta H\F_2P^0 \RP^\infty\] which we would like to analyze.  This map is determined by where it sends the class $u^{-1} x$, and because it must simultaneously respect gradings and belong to a Hopf algebra structure it is forced to take the following form: \[\Delta(u^{-1} x) = u^{-1} x \otimes 1 + 1 \otimes u^{-1} x.\]  Noticing that this is exactly the diagonal map in \Cref{InformalAdditiveGroupExample}, we tentatively\footnote{Bear in mind that we haven't yet discussed $X_{H\F_2}$ for infinite complexes $X$. We will have to modify this slightly; see \Cref{RPinftyExampleForReal}.} identify $\RP^\infty_{H\F_2}$ with the additive group: \[\RP^\infty_{H\F_2} \cong \mathbb G_a.\]
+\end{example}
+
+
+
+
+
+
+
+
+\section{Feb 1: The Steenrod algebra}
+
+We now consider the action of the Steenrod algebra.  Naively approached, this does not fit into the framework we've been sketching so far: the Steenrod algebra is a noncommutative algebra, and so the action map \[\mathcal A^* \otimes H\F_2P^0 X \to H\F_2P^0 X\] will be difficult to squeeze into any kind of algebro-geometric framework.  Milnor was the first person to see a way around this, with two crucial observations.  First, the linear-algebraic dual of the Steenrod algebra $\mathcal A_*$ is a commutative ring, since the Cartan formula on $\mathcal A^*$ is evidently cocommutative.  Second, if $X$ is a \emph{finite} complex, then applying Spanier--Whitehead duality gives rise to the following map:
+\begin{center}
+\begin{tikzcd}
+\mathcal A^* \otimes H\F_2P^0 DX \arrow{r} \arrow[-,double]{d} & H\F_2P^0 DX \arrow[-,double]{d} \\
+\mathcal A^* \otimes H\F_2P_0 X \arrow{r} & H\F_2P_0 X.
+\end{tikzcd}
+\end{center}
+Applying linear-algebraic duality to this bottom map gives a coaction map \[\lambda^*: H\F_2P^0 X \to H\F_2P^0 X \otimes \mathcal A_*,\] which we will re-re-interpret as an action map \[\alpha: \Spec \mathcal A_* \times X_{H\F_2} \to X_{H\F_2}.\]  Milnor works out the Hopf algebra structure of $\mathcal A_*$, by defining elements $\xi_j \in \mathcal A_*$ dual to $\Sq^{2^{j-1}} \cdots \Sq^{2^0} \in \mathcal A^*$.  Taking $X = \RP^n$ and $x \in H\F_2^1 \RP^n$ the generator, then since $\Sq^{2^{j-1}} \cdots \Sq^{2^0} x = x^{2^j}$ he deduces the formula \[\lambda^*(x) = \sum_{j=0}^{\lfloor \log_2 n \rfloor} x^{2^j} \otimes \xi_j.\]  Notice that these formulas stabilize as $n$ grows.  He then makes the following calculation, stable in $n$:
+\begin{align*}
+(\lambda^* \otimes \id) \circ \lambda^*(x) & = (\id \otimes \Delta) \circ \lambda^*(x) & \text{(coaction)} \\
+(\lambda^* \otimes \id) \left( \sum_{j=0}^\infty x^{2^j} \otimes \xi_j \right) & = \\
+\sum_{j=0}^\infty \left( \sum_{i=0}^\infty x^{2^i} \otimes \xi_i \right)^{2^j} \otimes \xi_j & = & \text{(ring homomorphism)} \\
+\sum_{j=0}^\infty \left( \sum_{i=0}^\infty x^{2^{i+j}} \otimes \xi_i^{2^j} \right) \otimes \xi_j & = & \text{(Freshman's dream)} \\
+\sum_{j=0}^\infty \left( \sum_{i=0}^\infty x^{2^{i+j}} \otimes \xi_i^{2^j} \right) \otimes \xi_j & = (\id \otimes \Delta) \left( \sum_{m=0}^\infty x^{2^m} \otimes \xi_m \right) \\
+\sum_{j=0}^\infty \left( \sum_{i=0}^\infty x^{2^{i+j}} \otimes \xi_i^{2^j} \right) \otimes \xi_j & = \sum_{m=0}^\infty x^{2^m} \otimes \Delta(\xi_m),
+\end{align*}
+from which it follows that \[\Delta \xi_m = \sum_{i+j=m} \xi_i^{2^j} \otimes \xi_j.\]
+\begin{theorem}[Milnor]
+$\mathcal A_* = \F_2[\xi_1, \xi_2, \ldots, \xi_j, \ldots]$.
+\end{theorem}
+\begin{proof}
+Milnor counts how many elements he has produced, compares against how many Adem and Cartan found, and sees that he has exactly enough.
+\end{proof}
+
+To study this in terms of algebraic geometry, we need only identify what the series $\lambda^*(x)$ embodies.  Note that this necessarily involves some creativity, and the only justification we can supply will be moral, borne out over time.  With that in mind, here is one such description.  Recall the multiplication map \[\RP^\infty_{H\F_2} \times \RP^\infty_{H\F_2} \to \RP^\infty_{H\F_2}.\]  Since this map is induced by a map of spaces, it is equivariant for the action by the group scheme $\Spec \mathcal A_*$.  Since the action on the left is diagonal, we deduce the formula $\lambda^*(x_1 + x_2) = \lambda^*(x_1) + \lambda^*(x_2)$.
+
+\begin{lemma}
+The series $\lambda^*(x) = \sum_{j=0}^\infty x^{2^j} \otimes \xi_j$ is the universal example of a series satisfying $\lambda^*(x_1 + x_2) = \lambda^*(x_1) + \lambda^*(x_2)$.  The functor $\Spec \mathcal A_*$ assigns to a test $\F_2$--algebra $T$ the set of power series $f$ satisfying $f(x_1 + x_2) = f(x_1) + f(x_2)$.\todo{Mention how $\mathbb G_m$ acts: that series expression has character $1$.} \qed
+\end{lemma}
+
+\todo{Really talk about formal schemes here, now that this is a separate lecture.} We close our discussion by codifying what Milnor did when he stabilized against $n$.  Each $\RP^n_{H\F_2}$ is a finite affine scheme, and to make sense of the object $\RP^\infty_{H\F_2}$ Milnor's technique was to consider the ind-system $\{\RP^n_{H\F_2}\}_{n=0}^\infty$ of finite affine schemes, itself called a \textit{formal scheme}.  We will follow this technique ourselves to resolve deficiency \ref{InfiniteCplxDeficiency}:
+\begin{definition}
+When $X$ is an infinite complex, filter it by its subskeleta $X^{(n)}$ and define $X_{H\F_2}$ to be the ind-system $\{X^{(n)}_{H\F_2}\}_{n=0}^\infty$ of finite schemes.
+\end{definition}
+\noindent This choice has several consequences.  First, it clarifies the above example:
+\begin{example}[{(cf. \Cref{RPExampleFaulty})}]\label{RPinftyExampleForReal}
+Write $\G_a$ for the ind-system $\mathbb A^{1, (n)}$ with the group scheme structure given in \Cref{RPExampleFaulty}.  This is the group scheme of all nilpotent elements, noting that the sum of two nilpotent elements of orders $n$ and $m$ is guaranteed to itself be nilpotent with order at most $n+m$.  (Note that this is also reflected by a skeletal factorization of the multiplication map on $\RP^\infty$ as $\RP^n \times \RP^m \to \RP^{n+m}$.)  As group schemes, we have calculated \[\RP^\infty_{H\F_2} \cong \G_a.\]
+\end{example}
+\noindent Second, note that the following morphism sets are very different:\todo{This is sloppily stated. You're really complaining about a distinction between the morphism schemes.}
+\begin{align*}
+\CatOf{GroupSchemes}_{\F_2/}(\mathbb G_a, \mathbb G_a) & \cong \CatOf{HopfAlgebras}_{\F_2/}(\F_2[x], \F_2[x]) \\
+\CatOf{FormalGroups}_{\F_2/}(\G_a, \G_a) & \cong \CatOf{HopfProAlgebras}_{\F_2/}(\F_2\llbracket x \rrbracket, \F_2\llbracket x \rrbracket).
+\end{align*}
+The former is populated by polynomials and the latter is populated by power series.  Since our description of $\Spec \mathcal A_*$ involves power series, it follows that the correct name for this scheme is \[\Spec \mathcal A_* \cong \underline{\Aut}(\G_a).\]
+
+Finally, the formula $\RP^\infty_{H\F_2} \cong \G_a$ is meant to point out that this language of formal schemes has a very good compression ratio: you can fit a lot of information into a very tiny space.  This formula simultaneously embodies its cohomology ring, its diagonal, and how the dual Steenrod algebra coacts.
+
+\todo{Include a recursive formula for the antipode map, coming from power series inversion.}
+
+
+
+
+
+
+\section{Feb 3: The mod--$2$ Adams spectral sequence}
 
 The Adams spectral sequence
 
@@ -316,7 +439,9 @@ picture of the cohomology of the structure sheaf
 
 
 
-\section{Feb 3}
+
+
+\section{Feb 5: The unoriented bordism ring}
 
 the splitting principle
 
@@ -345,6 +470,7 @@ This means that the Adams spectral sequence degenerates and this computes $\pi_*
 
 
 
+Generally: if $X$ is a space, then $X_{H\F_2}$ is a scheme with an $\Aut \widehat \G_a$--action. If $X$ is a spectrum (so it fails to have a diagonal map) then $(H\F_2)_* X$ is just an $\F_2$--module, also with an $\Aut \widehat \G_a$--action.
 
 The cohomology of a qc sheaf pushed forward from a scheme to a stack along a cover agrees with just the cohomology over the scheme. (In the case of $* \to * \mmod G$, this probably uses the cospan $* \to * \mmod G \leftarrow *$ with pullback $G$...)
 
@@ -363,8 +489,6 @@ Make clear the distinction between $E_n$ and $\widehat{E(n)}$. Maybe explain the
 
 
 
-
-\section{Feb 5}
 
 \section{Feb 8}
 
@@ -457,7 +581,7 @@ Make clear the distinction between $E_n$ and $\widehat{E(n)}$. Maybe explain the
 \item The periodicity and thick subcategory theorems. Bousfield localization, chromatic localizations and their properties, chromatic convergence.
 \item $E(1)$--local homotopy of the sphere.
 
-\textsc{The $\sigma$--orientation}
+\textsc{The sigma--orientation}
 
 \item Thom spectra, line bundles, and divisors
 \item The nonrigid, complex $\sigma$--orientation
